[gd_scene load_steps=2 format=3 uid="uid://de3ufywow5sc0"]

[ext_resource type="Script" uid="uid://pt7sgkoobyj8" path="res://scenes/UI/pause_menu.gd" id="1_qo2fb"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qo2fb")

[node name="PauseButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.95500004
anchor_top = 0.071
anchor_right = 0.95500004
anchor_bottom = 0.071
offset_left = -38.600098
offset_top = -45.68
offset_right = 39.399902
offset_bottom = 45.319992

[node name="Menu" type="Node2D" parent="."]
z_index = 10

[node name="ColorRect" type="ColorRect" parent="Menu"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.3764706)

[node name="ResumeButton" type="Button" parent="Menu"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.25300002
anchor_right = 0.5
anchor_bottom = 0.25300002
offset_left = 715.0
offset_top = 178.0
offset_right = 1205.0
offset_bottom = 368.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 91
text = "Resume
"

[node name="SettingsButton" type="Button" parent="Menu"]
offset_right = 8.0
offset_bottom = 8.0

[connection signal="button_down" from="PauseButton" to="." method="_on_pause_button_button_down"]
[connection signal="button_down" from="Menu/ResumeButton" to="." method="_on_resume_button_button_down"]
